# cs4500-wortham

10/: Makefile  xclient  xserver
10/Other/xclient/: Cargo.toml
10/Other/xclient/src/: main.rs
10/Other/xclients/: Cargo.toml
10/Other/xserver/: Cargo.toml
3/: Makefile
3/Other/: Cargo.toml
3/Other/src/: main.rs
4/: Makefile
4/Other/: Cargo.toml
4/Other/src/: main.rs
4/Tests/: 1-in.json  1-out.json  2-in.json  2-out.json  3-in.json
5/: Makefile
5/Other/: Cargo.toml
5/Other/src/: main.rs
5/Tests/: 4-in.json
6/: Makefile
6/Other/: Cargo.toml
6/Other/src/: main.rs
7/: bugs.md  reworked.md  todo.md
8/: Makefile
8/Other/: Cargo.toml
8/Other/src/: main.rs
8/Tests/: 1-in.json  1-out.json  2-in.json  2-out.json  3-in.json  3-out.json
9/: Makefile
9/Other/: Cargo.toml
9/Other/src/: main.rs
B/: xyes
B/Other/: Cargo.toml  README.md
B/Other/src/: main.rs
C/: Makefile
C/Other/: Cargo.toml
C/Other/src/: main.rs
C/Test/: 1-in.json  1-out.json
D/: Cargo.toml  Makefile  button.html
D/Other/: Cargo.toml
D/Other/src/: main.rs
D/src/: main.rs
E/: Cargo.toml  Makefile
E/Other/: Cargo.toml
E/Other/src/: main.rs
E/Test/: 2-in.json  2-out.json
E/src/: main.rs  xjson.rs
Fish/: README.md  run_tests.sh  xtest
Fish/3/: Cargo.toml
Fish/3/Tests/: 2-in.json
Fish/3/src/: main.rs
Fish/Admin/: manager-interface.rs  manager.rs  referee.rs
Fish/Common/: Cargo.toml  game-tree.rs  player-interface.rs  state.rs
Fish/Common/src/: board.rs  direction.rs  lib.rs  main.rs  tile.rs
Fish/Common/src/client/: client_to_server_proxy.rs  mod.rs  player.rs  proxy_client.rs  proxy_player.rs  strategy.rs
Fish/Common/src/common/: action.rs  board.rs  boardposn.rs  direction.rs  game_tree.rs  gamephase.rs  gamestate.rs  mod.rs  penguin.rs  player.rs  posn.rs  tile.rs  util.rs
Fish/Common/src/server/: ai_client.rs  client.rs  connection.rs  manager.rs  message.rs  mod.rs  referee.rs  remote_client.rs  serverclient.rs  serverplayer.rs  signup.rs  strategy.rs
Fish/Planning/: game-state.md  games.md  manager-protocol.md  player-protocol.md  referee.md  remote.md  self-1.md  self-2.md  self-3.md  self-4.md  self-5.md  self-6.md  self-7.md  self-8.md  self-9.md
Fish/Player/: human-player.rs  player.rs  strategy.rs
Fish/Remote/: README.md  signup.rs
(+2 files in other folders)
