[package]
name = "xboard"
version = "0.1.0"
authors = ["Ryan Drew <drew.r@northeastern.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fish = { path = "../../Fish/Common" }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"