[package]
name = "xgui"
version = "0.1.0"
authors = ["Jake Fecher <jfecher11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fish = { path = "../../Fish/Common" }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"

[profile.release]
opt-level = "z"

[profile.test]
opt-level = "z"