[package]
name = "xgui"
version = "0.1.0"
authors = ["Jake Fecher <jfecher11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.8.0"
gio = "0.8.0"
cairo-rs = "0.8.0"
gdk = "0.12.0"

[profile.release]
opt-level = "z"
